a4/stage/tests/reject/wSt_3.2.2.a_invalid.ul
void main() {
    float a;
    float b;
    int c;
    c = b + a;    
}
